--- a/css/wedding.css
+++ b/css/wedding.css
@@ -57,12 +57,9 @@ a:hover {
 
 #header .see-more {
   position: absolute;
+  left: 49%;
   bottom: 4%;
-  left: 50%;
-  max-width: 21px;
-  margin-left: -12px;
   z-index: 200;
-  color: #fff;
   text-align: center;
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
@@ -96,7 +93,7 @@ a:hover {
 /* xs < 768 */
 @media screen and (max-width: 767px) {
   .header-text h1 {
-    font-size: 40px;
+    font-size: 35px;
     margin-top: -12px;
   }
 
@@ -266,11 +263,6 @@ h2.section-header:after {
   margin: 0 auto;
 }
 
-.hotel i {
-  font-size: 17px;
-  padding-right: 12px;
-}
-
 .hotel h3 {
   font-size: 15px;
   line-height: 27px;
@@ -280,6 +272,11 @@ h2.section-header:after {
   margin: 0 auto;
   background-color: #fff;
   padding: 60px 20px 40px 20px;
+}
+
+.hotel h3 .icon-plane {
+  font-size: 17px;
+  margin-right: 12px;
 }
 
 .hotel .info {
@@ -474,11 +471,11 @@ h2.section-header:after {
   }
 
   #header .see-more {
-    bottom: 10%;
+    bottom: 4%;
   }
 
   #header .see-more:hover {
-    bottom: 8%;
+    bottom: 3%;
   }
 
   #about {
